fix: select visible in dark mode (#2)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,6 +60,14 @@ select {
   color: inherit;
 }
 
+select {
+  background-color: var(--background-1);
+  border: 1px solid var(--border);
+  padding: 0.5rem 0.875rem;
+  border-radius: 0.375rem;
+  margin: 0.25rem 0;
+}
+
 input {
   background-color: var(--background);
   color: inherit;
